--- a/style.css
+++ b/style.css
@@ -1,21 +1,29 @@
 .grid__container {
     display: grid;
-    grid-template-columns: 3fr 1fr 1fr ;
-    grid-template-rows: auto 3fr auto;
+    grid-template-columns: 1fr 1fr 1fr 1fr ;
+    grid-template-rows: auto auto auto;
   gap: 2rem;
-  
 }
+
+
 
 .text__pack1 {
     grid-column-start: 1;
-    grid-column-end: 2;
+    grid-column-end: 3;
+    background-color: hsl(263, 55%, 52%);
+    max-width: 80rem;
+    padding: 2rem;
 }
 
 .text__pack2 {
-    grid-column: 3;
-    grid-column-end: 2;
-    grid-row: 4/-3;
+    /* grid-column: 3;
+  
+    grid-row: 2/3; */
+    background-color: hsl(217, 19%, 35%);
+    max-width: 50rem;
     }
+
+
 
    
  .text__pack4 {
@@ -26,7 +34,6 @@
             
 
 .text__pack5 {
-     grid-column: 3;
-     grid-column-end: 3;
-     grid-row: 4/-3;
+    grid-column: 4;
+     grid-row: 1 / span 2;
 }
